simple css styling for images

--- a/live.html
+++ b/live.html
@@ -7,6 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quick Photos Album - powered by Cloudinary</title>
 
+
+
+    <style>
+        body {
+            box-sizing: border-box;
+            background: #eeeef1;
+        }
+
+        .albumcontents {
+            background: #eeeef1;
+        }
+
+        img {
+            border-radius: 5%;
+            margin: 1px;
+        }
+    </style>
 </head>
 
 <body>
