basic type styling

--- a/live.html
+++ b/live.html
@@ -12,7 +12,19 @@
     <style>
         body {
             box-sizing: border-box;
-            background: #eeeef1;
+            background: #eeeef1; 
+        }
+
+        h1{
+            font-family: Georgia, serif;
+            font-weight: 700;
+            font-size:  3.15rem;
+        }
+
+        h2{
+            font-family: sans-serif;
+            font-weight: 300;
+            font-size: 1.77rem ;
         }
 
         .albumcontents {
