Applying g_auto to square aspect images

--- a/live.html
+++ b/live.html
@@ -114,7 +114,7 @@
                         img = document.createElement("img");
                         img.class = "imageitem";
                         // initially, just a basic 300 x 300 image 
-                        img.src = "https://res.cloudinary.com/" + cloud_name + "/image/upload/q_auto,f_auto/w_300,h_300,c_fill/e_improve/" + imageitem.public_id + "." + imageitem.format;
+                        img.src = "https://res.cloudinary.com/" + cloud_name + "/image/upload/q_auto,f_auto/w_300,h_300,c_fill,g_auto/e_improve/" + imageitem.public_id + "." + imageitem.format;
 
                         // link the lightgallery anchor to the img
                         lightgalleryAnchor.appendChild(img);
