--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Photo Album : powered by Cloudinary</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    
     <style>
         body {
             box-sizing: border-box;
@@ -15,7 +18,7 @@
         }
     
         h1 {
-            font-family: Georgia, serif;
+            font-family: 'poppins', serif;
             font-weight: 700;
             font-size: 3.15rem;
         }
