--- a/live.html
+++ b/live.html
@@ -11,6 +11,9 @@
     <script src="js/lightgallery.js"></script>
     <script src="js/lg-autoplay.js"></script>
     <script src="js/lg-fullscreen.js"></script>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
     <style>
         body {
@@ -19,7 +22,7 @@
         }
 
         h1{
-            font-family: Georgia, serif;
+            font-family: 'Poppins', serif;
             font-weight: 700;
             font-size:  3.15rem;
         }
