update hint text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <input type="text" id="albumname" name="albumname" size="20">
     <button id="gotoButton" onclick="location.href = './live.html?album=' + document.getElementById('albumname').value.toLowerCase(); ;">Go To Album</button>
 
-    <p>^^ try entering 'sunsets' or 'cars'</p>
+    <p>^^ try entering 'cars', 'motorbikes' or 'sunsets'</p>
 
     </div>
 
