--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Quick Album</h1>
+    <h1>Quick Album<./h1>
+    <h2>A serverless image gallery tool powered by Cloudinary</h2>
     <p>
         A simple front-end-only approach to create quick photo albums leveraging Cloudinary for image management, organisation, manipulation, optimisation and delivery
         <br/>
