move project details to foot

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 
         #project {
            position: fixed;
-            bottom: 200px;
+            bottom: 0px;
             width: 100%;
+            margin-bottom: 15px;
+            padding: 0;
         }
 
         .center {
