--- a/index.html
+++ b/index.html
@@ -94,6 +94,47 @@
             margin: 0 auto;
              text-align: center;
         }
+
+
+        @media only screen and (max-device-width: 700px){
+
+            h1 {
+                font-family: 'poppins', serif;
+                font-weight: 700;
+                font-size: 2.15rem;
+            }
+        
+            h2 {
+                font-family: sans-serif;
+                font-weight: 300;
+                font-size: 1.77rem;
+            }
+
+            p {
+                    font-family: sans-serif;
+                    font-weight: 200;
+                    font-size: 0.90rem;
+            }
+
+            #searchbar {
+                width: 400px;
+                margin-left: auto;
+                margin-right: auto;
+                display: block;
+                text-align: center;
+                padding-top: 20px;
+            }
+
+
+
+            .center {
+                width: 350px;
+                margin: 0 auto;
+                text-align: left;
+            }
+            
+
+        }
     </style>
 
 
@@ -112,7 +153,7 @@
 
     <div id="project">
         <p class="center">Quick Photo Album is a project by <a href="https://benseymour.com/">Ben</a> and Patrick powered by <a href="https://cloudinary.com/">Cloudinary</a>.</p>
-        <p class="center">Project repo: <a href="https://github.com/bseymour/quickphotoalbum">https://github.com/bseymour/quickphotoalbum</a></p>
+        <p class="center">Project repo: <a href="https://github.com/bseymour/quickphotoalbum">github : quickphotoalbum</a></p>
     </div>
 
 
