Change default message
also title

--- a/live.html
+++ b/live.html
@@ -46,8 +46,8 @@
 
 <body>
     <div class="albumheader">
-        <h1 id="albumtitle">Album Title Placeholder</h1>
-        <h2 id="albumdescription">If you can see this.... no data has been loaded</h2>
+        <h1 id="albumtitle">No data loaded</h1>
+        <h2 id="albumdescription">The album you have searched for does not exist (or there could be a loading issue) </h2>
     </div>
 
     <div id="albumcontents">
